Bug List: (This bug is not in your last search results)   Show last search results      Search page      Enter new bug
Bug#: 13189
Product:  
Component:  
Status: RESOLVED
Resolution: FIXED
Assigned To: Not yet assigned to anyone <unassigned@gcc.gnu.org>
Host:
Reported against  
Priority:  
Severity:  
Target Milestone:  
 
 
Target:
Reporter: Pétur Runólfsson <peturrun@gmail.com>
Add CC:
CC:
Remove selected CCs
Build:
URL:
Summary:
Keywords:
Known to work:
Known to fail:

Attachment Description Type Created Size Actions
encfilebufbug.cc Test case text/plain 2003-11-25 16:25 197 bytes Edit
Create a New Attachment (proposed patch, testcase, etc.) View All

Bug 13189 depends on: Show dependency tree
Show dependency graph
Bug 13189 blocks:

Additional Comments:






View Bug Activity   |   Format For Printing   |   Clone This Bug


Description:   Last confirmed: 2003-11-26 16:48 Opened: 2003-11-25 16:23
This file has an extreme case of bitrot. It currently fails because it
hasn't been updated to compile with the new parser. Fixing that is not
likely to help though, since enc_char_traits::state_type and
enc_char_traits::pos_type don't meet the requirements for basic_filebuf.

enc_filebuf doesn't work with 3.2.3 or 3.3.2 either, it causes linker
errors.

------- Comment #1 From Pétur Runólfsson 2003-11-25 16:25 -------
Created an attachment (id=5213) [edit]
Test case

------- Comment #2 From Andrew Pinski 2003-11-26 16:48 -------
It has been bitrotten since at least 3.3:

pr13189.cc: In function `int main()':
pr13189.cc:6: error: aggregate `std::__enc_traits st' has incomplete type and 
   cannot be defined
/usr/include/gcc/darwin/3.3/c++/bits/fpos.h: At global scope:
/usr/include/gcc/darwin/3.3/c++/bits/fpos.h: In instantiation of `std::fpos<std::__enc_traits>
':
/usr/include/gcc/darwin/3.3/c++/streambuf:257:   instantiated from `std::basic_streambuf<
char, __gnu_cxx::enc_char_traits<char> >'
pr13189.cc:8:   instantiated from `std::basic_filebuf<char, __gnu_cxx::enc_char_traits<
char> >'
pr13189.cc:8:   instantiated from `__gnu_cxx::enc_filebuf<char>'
pr13189.cc:8:   instantiated from here

------- Comment #3 From CVS Commits 2003-12-05 06:54 -------
Subject: Bug 13189

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	bkoz@gcc.gnu.org	2003-12-05 06:54:24

Modified files:
	libstdc++-v3   : ChangeLog 
	libstdc++-v3/include/bits: fstream.tcc postypes.h sstream.tcc 
	                           streambuf.tcc 
	libstdc++-v3/include/ext: enc_filebuf.h 
Added files:
	libstdc++-v3/testsuite/ext/enc_filebuf/char: 13189.cc 
	libstdc++-v3/testsuite/ext/enc_filebuf/wchar_t: 13189.cc 
	libstdc++-v3/testsuite/ext/stdio_filebuf/char: 1.cc 2.cc 
	libstdc++-v3/testsuite/ext/stdio_sync_filebuf/char: 1.cc 
	                                                    12048-1.cc 
	                                                    12048-2.cc 
	                                                    12048-3.cc 
	                                                    12048-4.cc 
	libstdc++-v3/testsuite/ext/stdio_sync_filebuf/wchar_t: 1.cc 
	                                                       12948-1.cc 
	                                                       12948-2.cc 
	                                                       12948-3.cc 
	                                                       12948-4.cc 
Removed files:
	libstdc++-v3/testsuite/ext: stdio_filebuf.cc stdio_filebuf_2.cc 
	                            stdio_sync_filebuf_char.cc 
	                            stdio_sync_filebuf_wchar_t.cc 

Log message:
	2003-12-05  Benjamin Kosnik  <bkoz@redhat.com>
	
	PR libstdc++/13189
	* include/ext/enc_filebuf.h: Fix.
	* include/bits/fstream.tcc: Tweak formatting.
	* include/bits/postypes.h: Same.
	* include/bits/sstream.tcc: Same.
	* include/bits/streambuf.tcc: Same.
	* testsuite/ext/stdio_filebuf.cc: Split.
	* testsuite/ext/stdio_filebuf_2.cc: Split.
	* testsuite/ext/stdio_sync_filebuf_char.cc: Split.
	* testsuite/ext/stdio_sync_filebuf_wchar_t.cc: Split.
	* testsuite/ext/enc_filebuf/char/13189.cc: New.
	* testsuite/ext/enc_filebuf/wchar_t/13189.cc: New.
	* testsuite/ext/stdio_filebuf/char/1.cc: New.
	* testsuite/ext/stdio_filebuf/char/2.cc: New.
	* testsuite/ext/stdio_sync_filebuf/char/1.cc: New.
	* testsuite/ext/stdio_sync_filebuf/char/12048-1.cc: New.
	* testsuite/ext/stdio_sync_filebuf/char/12048-2.cc: New.
	* testsuite/ext/stdio_sync_filebuf/char/12048-3.cc: New.
	* testsuite/ext/stdio_sync_filebuf/char/12048-4.cc: New.
	* testsuite/ext/stdio_sync_filebuf/wchar_t/1.cc: New.
	* testsuite/ext/stdio_sync_filebuf/wchar_t/12948-1.cc: New.
	* testsuite/ext/stdio_sync_filebuf/wchar_t/12948-2.cc: New.
	* testsuite/ext/stdio_sync_filebuf/wchar_t/12948-3.cc: New.
	* testsuite/ext/stdio_sync_filebuf/wchar_t/12948-4.cc: New.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libstdc++-v3/ChangeLog.diff?cvsroot=gcc&r1=1.2130&r2=1.2131
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libstdc++-v3/include/bits/fstream.tcc.diff?cvsroot=gcc&r1=1.113&r2=1.114
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libstdc++-v3/include/bits/postypes.h.diff?cvsroot=gcc&r1=1.2&r2=1.3
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libstdc++-v3/include/bits/sstream.tcc.diff?cvsroot=gcc&r1=1.36&r2=1.37
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libstdc++-v3/include/bits/streambuf.tcc.diff?cvsroot=gcc&r1=1.47&r2=1.48
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libstdc++-v3/include/ext/enc_filebuf.h.diff?cvsroot=gcc&r1=1.2&r2=1.3
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libstdc++-v3/testsuite/ext/stdio_filebuf.cc.diff?cvsroot=gcc&r1=1.2&r2=NONE
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libstdc++-v3/testsuite/ext/stdio_filebuf_2.cc.diff?cvsroot=gcc&r1=1.4&r2=NONE
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libstdc++-v3/testsuite/ext/stdio_sync_filebuf_char.cc.diff?cvsroot=gcc&r1=1.3&r2=NONE
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libstdc++-v3/testsuite/ext/stdio_sync_filebuf_wchar_t.cc.diff?cvsroot=gcc&r1=1.3&r2=NONE
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libstdc++-v3/testsuite/ext/enc_filebuf/char/13189.cc.diff?cvsroot=gcc&r1=NONE&r2=1.1
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libstdc++-v3/testsuite/ext/enc_filebuf/wchar_t/13189.cc.diff?cvsroot=gcc&r1=NONE&r2=1.1
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libstdc++-v3/testsuite/ext/stdio_filebuf/char/1.cc.diff?cvsroot=gcc&r1=NONE&r2=1.1
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libstdc++-v3/testsuite/ext/stdio_filebuf/char/2.cc.diff?cvsroot=gcc&r1=NONE&r2=1.1
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libstdc++-v3/testsuite/ext/stdio_sync_filebuf/char/1.cc.diff?cvsroot=gcc&r1=NONE&r2=1.1
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libstdc++-v3/testsuite/ext/stdio_sync_filebuf/char/12048-1.cc.diff?cvsroot=gcc&r1=NONE&r2=1.1
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libstdc++-v3/testsuite/ext/stdio_sync_filebuf/char/12048-2.cc.diff?cvsroot=gcc&r1=NONE&r2=1.1
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libstdc++-v3/testsuite/ext/stdio_sync_filebuf/char/12048-3.cc.diff?cvsroot=gcc&r1=NONE&r2=1.1
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libstdc++-v3/testsuite/ext/stdio_sync_filebuf/char/12048-4.cc.diff?cvsroot=gcc&r1=NONE&r2=1.1
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libstdc++-v3/testsuite/ext/stdio_sync_filebuf/wchar_t/1.cc.diff?cvsroot=gcc&r1=NONE&r2=1.1
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libstdc++-v3/testsuite/ext/stdio_sync_filebuf/wchar_t/12948-1.cc.diff?cvsroot=gcc&r1=NONE&r2=1.1
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libstdc++-v3/testsuite/ext/stdio_sync_filebuf/wchar_t/12948-2.cc.diff?cvsroot=gcc&r1=NONE&r2=1.1
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libstdc++-v3/testsuite/ext/stdio_sync_filebuf/wchar_t/12948-3.cc.diff?cvsroot=gcc&r1=NONE&r2=1.1
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libstdc++-v3/testsuite/ext/stdio_sync_filebuf/wchar_t/12948-4.cc.diff?cvsroot=gcc&r1=NONE&r2=1.1


------- Comment #4 From Benjamin Kosnik 2003-12-05 17:20 -------
This can be closed. Petur, I may try to work on the enc_filebuf work this
weekend, it looks pretty close to me, but it depends on how far I get with other
bugs today.

New bugs about enc_filebuf should be new bugzilla reports.

------- Comment #5 From Wolfgang Bangerth 2003-12-05 17:36 -------
Closing because bkoz said so. 

Bug List: (This bug is not in your last search results)   Show last search results      Search page      Enter new bug